examples/test/testpolicy1929.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1929
  namespace: namespace307
spec:
  podSelector:
    matchLabels:
      key47: value26
      key48: value8
      key27: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value47
          key35: value43
          key41: value28
      podSelector:
        matchLabels:
          key15: value45
          key26: value7
          key13: value34
